# fastCSV

./: CMakeLists.txt  README.md  main.cpp
lib/fastCSV/: fastCSV.hpp  gzipReadBuffer.hpp  gzipReadBuffer_zlib.hpp  rawReadBuffer.hpp
lib/miniz/: miniz.cpp  miniz.h  minizInflator.hpp
lib/zlib/: BUILD.gn  build.sh  configure
